hphp/test/slow/parser/hh-reserved-name-arraykey-2.php.expectf
Fatal error: Cannot use 'HH\Arraykey' as class name as it is reserved in %s on line 4
